# phonedrop

./: .gitignore  CMakeLists.txt  README.md  installer_windows.iss
assets/: phonedrop.desktop  postrm  resources.rc
src/: gui.c  gui.h  i18n.h  main.c  net_utils.c  net_utils.h  qr_utils.c  qr_utils.h  server.c  server.h
web/: index.html
